--- a/ch9_shortest_path.ipynb
+++ b/ch9_shortest_path.ipynb
@@ -106,7 +106,7 @@
     "        # 현재 확인하는 노드와 연결된 노드(다음 노드)를 모두 체크하기 위해 반복\n",
     "        for next in graph[now]:\n",
     "            # 시작 노드에서 현재 확인 노드를 경유하여 다음 노드로 넘어갈 때의 비용 선언\n",
-    "            cost = shortest[now] + 1\n",
+    "            cost = shortest[now] + 1 ## 여기가 cost = dist + 1 이 되어야 하는 것 같은데 이렇게 해도 정답이 나온다. 어차피 해당 순간엔 같은 값이기 때문에. (직전 반복에서 cost를 shortest에 업데이트하고, 큐에는 그 cost를 집어넣으니까 같은 값일 수밖에 없음)\n",
     "            \n",
     "            # 해당 비용이 다음 노드의 기존 최단 거리보다 작다면\n",
     "            if cost < shortest[next]:\n",
@@ -207,6 +207,226 @@
     "#### 제한\n",
     "* 풀이 시간 60분\n",
     "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 도시 개수가 최대 30,000이라 플로이드 워셜은 어려울 것 같다.\n",
+    "* 다익스트라 알고리즘을 통해 한 도시를 기점으로 몇 개의 다른 도시를 갈 수 있는지 + 그 중 가장 오래 걸리는 도시까지는 얼마나 걸리는지를 구하면 될 듯?\n",
+    "* 메시지를 받은 도시에서 자기 자신은 빼야 한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* 다익스트라를 사용했으므로 O(ElogV)\n",
+    "* E는 N에 해당하며 N은 최대 30,000이고, V는 M에 해당하며 M은 최대 200,000이다. 1초 내에 해결이 가능할 것으로 보인다.\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 내 코드에서의 cost = shortest[now] + next[1] 를 답지에선 cost = dist + next[1] 로 하긴 하는데, 어차피 두 값은 같다.\n",
+    "* result 리스트를 따로 만들어서 len, max까지 세 번 O(N)의 일을 할 게 아니라, count 변수와 max_dist 변수를 만들어 for문 하나에서 갱신하며 처리하는 게 O(N) 한 번이므로 더 효율적이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "# 도시 개수 N, 통로 개수 M, 메시지 시작 도시 C 입력\n",
+    "N, M, C = map(int, input().split())\n",
+    "\n",
+    "# 통로 및 메시지 전달 시간 입력\n",
+    "graph = [[] for _ in range(N+1)]\n",
+    "\n",
+    "for _ in range(M):\n",
+    "    X, Y, Z = map(int, input().split())\n",
+    "    # X 도시에서 Y도시로 메시지를 보내는 시간이 Z만큼 걸림\n",
+    "    graph[X].append((Y, Z))\n",
+    "\n",
+    "# 최단 거리 테이블을 초기화하기 위한 큰 값을 INF라는 변수에 선언\n",
+    "INF = int(1e9)\n",
+    "\n",
+    "# 시작 노드와의 최단 거리를 담은 리스트인 최단 거리 테이블 생성 및 초기화\n",
+    "shortest = [INF] * (N+1)\n",
+    "\n",
+    "# 다익스트라 알고리즘 선언\n",
+    "def dijkstra(start):\n",
+    "    \n",
+    "    # 시작 위치의 최단 거리를 0으로 초기화\n",
+    "    shortest[start] = 0\n",
+    "    \n",
+    "    # 우선순위큐 선언 및 시작 위치 삽입\n",
+    "    q = []\n",
+    "    heapq.heappush(q, (0, start))\n",
+    "    \n",
+    "    # 큐에 원소가 없을 때까지 반복\n",
+    "    while q:\n",
+    "        # 큐에서 거리가 가장 가까운 원소를 꺼냄\n",
+    "        dist, now = heapq.heappop(q)\n",
+    "        \n",
+    "        # 확인하는 노드의 거리가 시작 노드와의 최단 거리보다 크다면(확인해서 최단 거리를 이미 갱신했던 노드라면) 무시\n",
+    "        if shortest[now] < dist:\n",
+    "            continue\n",
+    "        \n",
+    "        # 확인하는 노드와 연결된 노드를 모두 확인하며\n",
+    "        for next in graph[now]:\n",
+    "            # 확인하는 노드를 거쳐 연결된 노드로 가는 최단 거리를 계산\n",
+    "            cost = shortest[now] + next[1] ## cost = dist + next[1]\n",
+    "                        \n",
+    "            # 해당 거리가 시작 노드에서 연결된 노드로 가는 거리보다 짧다면\n",
+    "            if cost < shortest[next[0]]:\n",
+    "                # 시작 노드에서 연결 노드로 가는 최단 거리를 갱신하고 최단 거리와 연결 노드를 큐에 삽입\n",
+    "                shortest[next[0]] = cost\n",
+    "                heapq.heappush(q, (cost, next[0]))\n",
+    "\n",
+    "# 다익스트라 알고리즘 실행\n",
+    "dijkstra(C)\n",
+    "\n",
+    "# 정답 계산을 위해 리스트 선언\n",
+    "result = []\n",
+    "# 최단 거리 테이블을 확인하며\n",
+    "for i in shortest:\n",
+    "    # 최단 거리가 INF보다 작다면(갱신이 되어 해당 도시에 도달할 수 있다고 확인되었으면) 리스트에 추가\n",
+    "    if i < INF:\n",
+    "        result.append(i)\n",
+    "\n",
+    "# 메시지가 도달한 도시의 수를 계산하기 위해 리스트의 전체 길이에서 자기 자신 하나를 뺀 길이를 계산하고,\n",
+    "# 도시들이 모두 메시지를 받는 데 걸리는 시간을 확인하기 위해 도달하기까지 가장 오랜 시간이 걸린 도시의 최단 거리를 max()로 구함\n",
+    "print(len(result)-1, max(result))\n",
+    "\n",
+    "## 정답 계산 답지 부분\n",
+    "\n",
+    "# # 도달할 수 있는 노드의 개수\n",
+    "# count = 0\n",
+    "# # 도달할 수 있는 노드 중에서, 가장 멀리 있는 노드와의 최단 거리\n",
+    "# max_dist = 0\n",
+    "# for d in shortest:\n",
+    "#     # 도달할 수 있는 노드인 경우\n",
+    "#     if d != INF:\n",
+    "#         count += 1\n",
+    "#         max_dist = max(max_dist, d)\n",
+    "\n",
+    "# # 시작 노드는 제외해야 하므로 count - 1 출력\n",
+    "# print(count-1, max_dist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q37. 플로이드\n",
+    "https://www.acmicpc.net/problem/11404"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 40분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 256MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 문제 이름대로 플로이드 워셜 알고리즘을 사용하자\n",
+    "* (생각 + 기억의 저편) '시작 도시와 도착 도시를 연결하는 노선은 하나가 아닐 수 있습니다.' => 그래프 구성할 때 min을 이용하여 최소 비용인 경우를 넣어야 한다.\n",
+    "* 인덱스 조심 좀 해라.\n",
+    "* input()을 사용하면 많이 느리다. sys.stdin.readline()을 쓰면 훨씬 효율적이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* O(n^3)\n",
+    "* n은 최대 100이므로 충분하다.\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 잘 풀었다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 3 1 4 \n",
+      "12 0 15 2 5 \n",
+      "8 5 0 1 1 \n",
+      "10 7 13 0 3 \n",
+      "7 4 10 6 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 시간이 애매하다면 sys.stdin.readline()을 활용하는 것도 방법.\n",
+    "\n",
+    "# 도시의 개수 n 입력\n",
+    "n = int(input())\n",
+    "\n",
+    "# 버스의 개수 m 입력\n",
+    "m = int(input())\n",
+    "\n",
+    "# 무한에 해당하는 큰 수를 INF로 정의\n",
+    "INF = int(1e9)\n",
+    "\n",
+    "# 버스 노선 정보 입력\n",
+    "graph = [[INF] * (n+1) for _ in range(n+1)]\n",
+    "for _ in range(m):\n",
+    "    a, b, c = map(int, input().split())\n",
+    "    graph[a][b] = min(graph[a][b], c)\n",
+    "\n",
+    "# 자기 자신으로의 비용은 0으로 초기화\n",
+    "## 실제값을 받기 전에 이걸 먼저 해주는 게 좋을듯. 혹시 자기 자신으로 가는 경로가 있을 수 있으니까?\n",
+    "for i in range(n+1):\n",
+    "    graph[i][i] = 0\n",
+    "\n",
+    "# 플로이드 워셜 알고리즘 수행\n",
+    "for k in range(1, n+1):\n",
+    "    for a in range(1, n+1):\n",
+    "        for b in range(1, n+1):\n",
+    "            graph[a][b] = min(graph[a][b], graph[a][k] + graph[k][b])\n",
+    "\n",
+    "# 플로이드 워셜을 결과를 전부 확인하며\n",
+    "for i in range(1, n+1):\n",
+    "    for j in range(1, n+1):\n",
+    "        # INF인 경우(도달하지 못한 경우)는 0, 아닌 경우는 값을 출력\n",
+    "        print(graph[i][j] if graph[i][j] != INF else 0, end=' ')\n",
+    "    # 줄 바꿈\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q38. 정확한 순위"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 40분\n",
+    "* 시간 제한 5초\n",
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
